--- a/reviews/styles/hansKedndrick.css
+++ b/reviews/styles/hansKedndrick.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'hans kendrick';
+    font-family: 'hansKendrick';
     src: url('../fonts/HansKendrick/neuehanskendrick-regular-webfont.eot');
     src: url('../fonts/HansKendrick/neuehanskendrick-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/HansKendrick/neuehanskendrick-regular-webfont.woff2') format('woff2'),
