--- a/reviews/styles/style.css
+++ b/reviews/styles/style.css
@@ -22,6 +22,7 @@ a {
 .main {
     background-color: #e2e7ec;
     min-height: 100vh;
+    padding-bottom: 100px;
 }
 
 .container {
@@ -34,7 +35,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     text-transform: uppercase;
-    padding-top: 80px;
+    padding: 80px 0 70px;
 }
 
 .reviews-item-holder {
@@ -126,4 +127,21 @@ a {
     width: 54px;
     height: 54px;
     border-radius: 50%;
+}
+
+.reviews-loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reviews-loading-img {
+    margin-right: 12px;
+    max-width: 30px;
+}
+
+.reviews-loading-text {
+    font-size: 13px;
+    color: #99a5b0;
+    text-transform: uppercase;
 }
